# crs

./: .gitignore  CHANGELOG.md  README.md  output  pyproject.toml  requirements.txt
docs/development/: TESTING.md
scripts/: run_tests.py
src/crs_thoughts/: cli.py  cli.pyi  exceptions.py
src/crs_thoughts/ai/: base.py  enrichment.py  suggestions.py
src/crs_thoughts/commands/: answer.py  question.py  thought.py
src/crs_thoughts/config/: settings.py
src/crs_thoughts/models/: entry.py
src/crs_thoughts/scripts/: __init__.py  run_tests.py  test_ollama_prompt.py  verify_ollama.py
src/crs_thoughts/search/: searxng.py
src/crs_thoughts/utils/: backup.py  formatting.py  storage.py
src/qa_thoughts/: __init__.py  cli.py
src/qa_thoughts/commands/: answer.py  question.py  thought.py
src/qa_thoughts/models/: entry.py
src/qa_thoughts/utils/: formatting.py  storage.py
tests/: conftest.py  test_cli.py  test_cli_backup.py  test_storage.py
tests/ai/: test_base.py  test_enrichment.py  test_ollama_connection.py
tests/scripts/: test_ollama_prompt.py
tests/search/: test_searxng.py
tests/utils/: test_backup.py
